Added words below numbers

--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,8 @@
 DATE_EVENT="06.06.2018 20:00"
 
 COLOR="155,200,30"
-COLOR_SIZE=50
+FONT_SIZE_NUMS=50
+FONT_SIZE_WORDS=22
 
 FONT_FILENAME="impact.ttf"
 
@@ -9,7 +10,8 @@ COVER_ORIGINAL_FILENAME="original.jpeg"
 COVER_FINAL_FILENAME="new.jpeg"
 
 X_COORDINATES="800,896,992"
-Y_COORDINATES="58,58,58"
+Y_COORDINATE_NUMS=45
+Y_COORDINATE_WORDS=100
 
 VK_GROUP_ID=111
 VK_GROUP_ACCESS_TOKEN="some_secret_key"
