--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 amqp==2.2.2
+attrs==17.4.0
 billiard==3.5.0.3
 celery==4.1.0
 certifi==2018.4.16
 chardet==3.0.4
 idna==2.6
 kombu==4.1.0
+more-itertools==4.1.0
 Pillow==5.1.0
+pluggy==0.6.0
+py==1.5.3
+pytest==3.5.0
 python-dotenv==0.8.2
 pytz==2018.4
 requests==2.18.4
+six==1.11.0
 urllib3==1.22
 vine==1.1.4
