--- a/.env-example
+++ b/.env-example
@@ -1,20 +1,20 @@
-DATE_EVENT="06.06.2018 20:00"
+DATE_EVENT=06.06.2018 20:00
 
-COLOR="155,200,30"
+COLOR=155,200,30
 FONT_SIZE_NUMS=50
 FONT_SIZE_WORDS=22
 
-FONT_FILENAME="impact.ttf"
+FONT_FILENAME=impact.ttf
 
-COVER_ORIGINAL_FILENAME="original.jpeg"
-COVER_FINAL_FILENAME="new.jpeg"
+COVER_ORIGINAL_FILENAME=original.jpeg
+COVER_FINAL_FILENAME=new.jpeg
 
-X_COORDINATES="800,896,992"
+X_COORDINATES=800,896,992
 Y_COORDINATE_NUMS=45
 Y_COORDINATE_WORDS=100
 
 VK_GROUP_ID=111
-VK_GROUP_ACCESS_TOKEN="some_secret_key"
-VK_API_VERSION="5.73"
+VK_GROUP_ACCESS_TOKEN=some_secret_key
+VK_API_VERSION=5.74
 
-LOG_DIR="logs"
+LOG_DIR=logs
